--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "translate-json-file",
-  "version": "1.0.4",
+  "version": "1.0.8",
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
@@ -8,9 +8,10 @@
   },
   "type": "module",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "clipboardy": "^3.0.0",
     "inquirer": "^9.1.4",
-    "playwright": "^1.31.1"
+    "playwright": "^1.31.1",
+    "cli-progress": "^3.12.0"
   }
 }
