--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "translate-json-file",
-  "version": "1.0.8",
+  "version": "1.1.3",
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "echo hello && node index.js"
   },
+  "keywords": [
+    "translate",
+    "json",
+    "file",
+    "google",
+    "translate"
+  ],
   "type": "module",
   "license": "MIT",
   "dependencies": {
-    "clipboardy": "^3.0.0",
     "inquirer": "^9.1.4",
     "playwright": "^1.31.1",
     "cli-progress": "^3.12.0"
