--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "type": "module",
   "license": "MIT",
   "dependencies": {
+    "cli-progress": "^3.12.0",
     "inquirer": "^9.1.4",
-    "playwright": "^1.31.1",
-    "cli-progress": "^3.12.0"
+    "playwright": "^1.31.1"
   }
 }
